--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   image: ^4.5.3
   shared_preferences: ^2.3.5
   intl: ^0.20.2
+  file_picker: ^10.0.0
+  path: ^1.9.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
